Revised social-icons and updated to use font-awesome5. Fixed line breaks in Book Reviews.

--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -548,13 +548,13 @@ hr.large {
 }
 .social-icons .nav-pills > li {
   margin-right: 4px;
-  margin-right: 0.25rem;
+  margin-right: 0.5rem;
 }
 .social-icons .nav-pills > li > a {
   padding: 4px 6px;
   padding: 0.25rem 6px;
   padding: 4px 0.375rem;
-  padding: 0.25rem 0.375rem;
+  padding: 0.20rem 0.275rem;
   height: 26px;
   height: 1.625rem;
   width: 26px;
